maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:7: error: expected start of definition
override def run() {
         ^WallFollowerMaze:29: error: Unmatched closing brace '}' ignored here
}
^