maze.wallfollower.WallFollowerMaze.scala.code
def mur(){
  left()
  return estFaceMur()
  }
}

override def run() {
  while (!estSurBiscuit()){
    if (mur()){
      right()
      if (!estFaceMur()){
        avance()
      }
      else{
        right()
      }
  }
    else{
      if (!estFaceMur()){
        avance()
      }
      else{
        left()
      }
    }
}
}